[gd_scene load_steps=13 format=3 uid="uid://b7o7hxeo8yie4"]

[ext_resource type="Script" uid="uid://cu4i58o1ix2ah" path="res://scene/sample_scene.gd" id="1_f1ww6"]
[ext_resource type="Texture2D" uid="uid://tpwxa2iuy4wx" path="res://Background/Background _image.jpeg" id="1_gtrjh"]
[ext_resource type="FontFile" uid="uid://bvmb75d0vr7ft" path="res://grapesoda_2/GrapeSoda.ttf" id="2_a8aid"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a8aid"]
texture = ExtResource("1_gtrjh")
modulate_color = Color(0.854902, 0.854902, 0.854902, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f1ww6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_436v1"]
bg_color = Color(0.741385, 0.741385, 0.741385, 1)
corner_radius_top_left = 17
corner_radius_top_right = 17
corner_radius_bottom_right = 17
corner_radius_bottom_left = 17
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o10y4"]
bg_color = Color(0.737193, 0.737193, 0.737193, 1)
corner_radius_top_left = 17
corner_radius_top_right = 17
corner_radius_bottom_right = 17
corner_radius_bottom_left = 17
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dodn0"]
bg_color = Color(0.796078, 0.796078, 0.796078, 1)
corner_radius_top_left = 17
corner_radius_top_right = 17
corner_radius_bottom_right = 17
corner_radius_bottom_left = 17
shadow_size = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a8aid"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1ww6"]
bg_color = Color(0.707967, 0.707966, 0.707967, 1)
corner_radius_top_left = 17
corner_radius_top_right = 17
corner_radius_bottom_right = 17
corner_radius_bottom_left = 17
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gmbna"]
bg_color = Color(0.71213, 0.712129, 0.71213, 1)
corner_radius_top_left = 17
corner_radius_top_right = 17
corner_radius_bottom_right = 17
corner_radius_bottom_left = 17
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8aid"]
bg_color = Color(0.796078, 0.796078, 0.796078, 1)
corner_radius_top_left = 17
corner_radius_top_right = 17
corner_radius_bottom_right = 17
corner_radius_bottom_left = 17
shadow_size = 3

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f1ww6")

[node name="SampleScene" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_a8aid")

[node name="Button" type="Button" parent="SampleScene"]
layout_mode = 1
offset_left = 18.0
offset_top = 18.0
offset_right = 121.0
offset_bottom = 57.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_a8aid")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_f1ww6")
theme_override_styles/hover = SubResource("StyleBoxFlat_436v1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o10y4")
theme_override_styles/normal = SubResource("StyleBoxFlat_dodn0")
text = "Pause"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -123.5
offset_right = 126.0
offset_bottom = 106.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_a8aid")
theme_override_font_sizes/font_size = 32
text = "Pause"
horizontal_alignment = 1

[node name="PauseMenu" type="VBoxContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.5
offset_top = -66.0
offset_right = 92.5
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="Panel2/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_a8aid")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_a8aid")
theme_override_styles/hover = SubResource("StyleBoxFlat_f1ww6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gmbna")
theme_override_styles/normal = SubResource("StyleBoxFlat_a8aid")
text = "Resume"

[node name="Restart" type="Button" parent="Panel2/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_a8aid")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_a8aid")
theme_override_styles/hover = SubResource("StyleBoxFlat_f1ww6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gmbna")
theme_override_styles/normal = SubResource("StyleBoxFlat_a8aid")
text = "Restart"

[node name="BackToMenu" type="Button" parent="Panel2/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_a8aid")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_a8aid")
theme_override_styles/hover = SubResource("StyleBoxFlat_f1ww6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gmbna")
theme_override_styles/normal = SubResource("StyleBoxFlat_a8aid")
text = "Back To Menu"

[connection signal="pressed" from="SampleScene/Button" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Panel2/PauseMenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel2/PauseMenu/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel2/PauseMenu/BackToMenu" to="." method="_on_back_to_menu_pressed"]
